# Adaptix-Contracts

./: .coverage  .env.example  .gitignore  .gitleaks.toml  .local-untracked-files.txt  AGENTS.md  ARCHITECTURE_TRUTH.md  BREAKING_CHANGES.md  CHANGELOG.md  COMPATIBILITY_MATRIX.json  CONTRIBUTING.md  CUTOVER_GATES.md  DEPLOYMENT_CHECKLIST.md  DEPRECATION_POLICY.md  DOMAIN_BOUNDARIES.md  FINALIZATION_SUMMARY.md  LICENSE  MARKET_READY_LEDGER.md  MODULE_ENTITLEMENTS.md  POLYREPO_MIGRATION_CHARTER.md  PRODUCTION_READINESS.md  RBAC_MIGRATION_TEMPLATE.md  README.md  REPO_OWNERSHIP.md  REPO_OWNERSHIP_LOCK.json  ROLLBACK_STANDARD.md  RUNBOOK.md  SECURITY.md  SERVICE_CONTRACT.md  SUPPLY_DOMAIN_INTEGRATION_GUIDE.md  SUPPLY_INTEGRATION_QUICK_START.md  SYSTEM_RULES.md  TEST_EVIDENCE.md  VERSION_COMPATIBILITY_POLICY.md  VERSION_COMPATIBILITY_POLICY_GLOBAL.md  __init__.py  conftest.py  contracts.json  founder_action_plan.schema.json  pyproject.toml  (+2 more)
.devcontainer/: devcontainer.json  postCreate.txt
.githooks/: pre-push
.github/: CODEOWNERS
.github/governance/: governance.manifest.json
.github/scripts/: agent_governance_runtime.py
.github/workflows/: auto-publish.yml  bedrock-repo-repair.yml  ci.yml  contracts-validation.yml  publish-contracts-v2.yml  publish-contracts.yml  standard-ci.yml  supply-chain.yml
adaptix_contracts/: AGENTS.md  __init__.py  audit_contracts.py  auth_contracts.py  compat.py  core_service_integration.py  envelope.py  error_contracts.py  event_contracts.py  inventory_events.py  medications_events.py  narcotics_events.py  rbac_contracts.py  registry.py  supply_integrations.py  trustsign_client.py  version.py
adaptix_contracts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adaptix_contracts/ai/: __init__.py  audit.py  capabilities.py  smart_text.py
adaptix_contracts/audit/: events.py
adaptix_contracts/auth/: __init__.py  cognito.py  context.py  module_entitlement_gate.py  permissions.py  rbac_dependencies.py
adaptix_contracts/cad/: __init__.py  ai.py  dispatch.py  events.py  handoffs.py  hems.py  mdt.py  medical_transport.py  models.py  nemsis_handoff.py  unit_status.py  vehicle_tracking.py
adaptix_contracts/calendar/: __init__.py  audit.py  conflict.py  event.py  models.py  resource.py
adaptix_contracts/common/: error_envelope.py  idempotency.py  provider_status.py
adaptix_contracts/epcr/: __init__.py  cad_handoff.py  (+3 more)
scripts/: agent_governance_runtime.py  audit_workspace_contracts.py
tests/: test_auth_contracts.py  test_cad_transport_contracts.py  test_calendar_kernel_contracts.py  test_compat.py  test_contract_examples.py  test_contract_surface.py  test_end_to_end.py  test_enums.py  test_envelope.py  test_event_catalog.py  test_fire_contracts.py  test_intake_contracts.py  test_narcotic_contracts.py  test_narcotic_enum_compat.py  test_registry.py  test_release_readiness.py  test_roles.py  test_scheduling_contracts.py  test_schemas.py  test_supply_integrations.py  test_trustsign_client.py  test_trustsign_client_mirror_drift.py
tools/: bedrock_ops.py
(+178 files in other folders)
