[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-contracts"
version = "1.0.2"
description = "Shared cross-domain schemas and contracts for the Adaptix platform"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "email-validator>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1,<2",
    "pytest==9.0.3",
    "pytest-cov==6.1.1"
    ,"twine>=6.1.0,<7"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptix_contracts*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:asyncio"
