[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-contracts"
version = "1.2.0"
description = "Shared cross-domain schemas and contracts for the Adaptix platform"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["adaptix", "contracts", "schemas", "pydantic", "ems", "dispatch", "healthcare"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "email-validator>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/joshuawendorf21310/Adaptix-Contracts"
Repository = "https://github.com/joshuawendorf21310/Adaptix-Contracts"
Changelog = "https://github.com/joshuawendorf21310/Adaptix-Contracts/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1,<2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0"
    ,"twine>=6.1.0,<7"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
